unisys-salesforce-case-study/force-app/main/default/objects/Servicio__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Servicios</relationshipLabel>
    <relationshipName>Servicios</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>