unisys-salesforce-case-study/force-app/main/default/objects/Servicio__c/fields/Cost_Without_VAT__c.field-meta.xml
<CustomField>
    <fullName>Cost_Without_VAT__c</fullName>
    <label>Cost Without VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>