unisys-salesforce-case-study/force-app/main/default/objects/Servicio__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inicial</fullName>
            </value>
            <value>
                <fullName>Pendiente de aprobación</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>