unisys-salesforce-case-study/force-app/main/default/objects/Servicio__c/fields/Total_Cost_With_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_With_VAT__c</fullName>
    <formula>Cost_Without_VAT__c * (1 + (VALUE(SUBSTITUTE(TEXT(VAT_Rate__c), &quot;%&quot;, &quot;&quot;)) / 100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost With VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>