unisys-salesforce-case-study/force-app/main/default/objects/Servicio__c/fields/VAT_Rate__c.field-meta.xml
<CustomField>
    <fullName>VAT_Rate__c</fullName>
    <label>VAT Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>21%</fullName>
                <default>true</default>
                <label>21%</label>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>